panoiq_stackstorm/microfrontend/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: panoiq-web-components
  labels:
    app: panoiq-web-components
spec:
  ports:
  - port: 34002
    targetPort: 80
  selector:
    app: panoiq-web-components

---
apiVersion: v1
kind: Service
metadata:
  name: panoiq-container-mfe
  labels:
    app: panoiq-container-mfe
spec:
  ports:
  - port: 34001
    targetPort: 80
  selector:
    app: panoiq-container-mfe

---
apiVersion: v1
kind: Service
metadata:
  name: panoiq-control-mfe
  labels:
    app: panoiq-control-mfe
spec:
  ports:
  - port: 35001
    targetPort: 80
  selector:
    app: panoiq-control-mfe

---
apiVersion: v1
kind: Service
metadata:
  name: panoiq-create-mfe
  labels:
    app: panoiq-create-mfe
spec:
  ports:
  - port: 34003
    targetPort: 80
  selector:
    app: panoiq-create-mfe

---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "panoiq-file-storage"
    labels: 
      app: "panoiq-file-storage"
  spec: 
    ports: 
      - 
        port: 34000
        targetPort: 80
    selector: 
      app: "panoiq-file-storage"

---
---
apiVersion: v1
kind: Service
metadata:
    name: web
spec:
  type: NodePort
  ports:
  - port: 10001
    nodePort: 32013
    targetPort: 10001
  selector:
    app: web
